fix overflow of dictionary (max-height: 900px)

--- a/src/widgets/dictionary/styles.module.scss
+++ b/src/widgets/dictionary/styles.module.scss
@@ -12,4 +12,7 @@
   box-shadow: unset;
   background: transparent;
   overflow: auto;
+  @media screen and (max-width: 900px) {
+    overflow: visible;
+  }
 }
